# Best-Practices-On-Azure-Sphere

./: README.md
AzureSphereHeapManagementExample/: .gitignore  CMakeLists.txt  app_manifest.json  launch.vs.json  main.c
EnvironmentMonitor/: .gitmodules  CMakeLists.txt  app_manifest.json  exit_codes.h  i2c.c  i2c.h  launch.vs.json  main.c
